--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Crossing the Streams - tech blog by Lari Hotari
+title: Coding the Streams - tech blog by Lari Hotari
 email: lhotari@apache.org
 description: >- # this means to ignore newlines until "baseurl:"
   Blogs and experiments about Apache Pulsar by Lari Hotari and guest authors. 
   The opinions are my own and do not represent the views of my employer
   or Apache Software Foundation (ASF) or Apache Pulsar PMC.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://crossingthestreams.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://codingthestreams.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lhotari
 github_username:  lhotari
 
@@ -33,7 +33,7 @@ github_username:  lhotari
 disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-    shortname: https-crossingthestreams-github-io
+    shortname: codingthestreams
 
 # Build settings
 theme: minima
