--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,18 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-spaceship
+  - jekyll-toc
 
-
+toc:
+  min_level: 1
+  max_level: 6
+  ordered_list: false
+  no_toc_section_class: no_toc_section
+  list_id: toc
+  list_class: section-nav
+  sublist_class: ''
+  item_class: toc-entry
+  item_prefix: toc-
 
 
 
