Pass cname to jeffreytse/jekyll-deploy-action

--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -9,6 +9,7 @@ permissions: write-all
 
 jobs:
   build_and_deploy:
+    if: ${{ github.repository == 'codingthestreams/codingthestreams.github.io' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -26,3 +27,4 @@ jobs:
         with:
           provider: 'github'
           token: ${{ secrets.GITHUB_TOKEN }}
+          cname: 'codingthestreams.com'
