--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Coding the Streams - tech blog by Lari Hotari
 email: lhotari@apache.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Blogs and experiments about Apache Pulsar by Lari Hotari and guest authors. 
+  Blogs and experiments about event streaming by Lari Hotari and guest authors. 
   The opinions are my own and do not represent the views of my employer
   or Apache Software Foundation (ASF) or Apache Pulsar PMC.
 baseurl: "" # the subpath of your site, e.g. /blog
